# NLPsych

./: .gitignore  MANIFEST.in  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py
app/: main.py  streamlit_app.py
demo_data/: nlpsych_dp_demo.csv
docs/: project_overview.md  testing_plan.md
pages/: Docs.py
src/NLPsych/: descriptive_stats.py  embedding.py  modeling.py  report.py  utils.py
src/nlpsych/: __init__.py  descriptive_stats.py  embedding.py  modeling.py  report.py  topic_modeling.py  utils.py
src/nlpsych_app/: app.py  launch.py  topic_state.py
src/nlpsych_app/.streamlit/: config.toml
src/nlpsych_app/pages/: Docs.py
tests/: test_descriptive_stats_core.py  test_descriptive_summary_table.py  test_embedding.py  test_import.py  test_launch.py  test_modeling_auto_cv_workflow.py  test_modeling_core.py  test_modeling_task_control.py  test_report.py  test_spacy_utils.py  test_topic_modeling.py  test_topic_modeling_edges.py  test_utils_model_loading.py
