[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nlpsych"
version = "0.1.3"
description = "Tools for text analysis, embeddings, and lightweight modeling with a Streamlit app interface."
readme = "README.md"
authors = [
  { name = "Shawn Manuel", email = "shawn.stephen.manuel@gmail.com" }
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Information Analysis",
]

# Dependencies needed to import and use nlpsych as a library
dependencies = [
  "pandas>=2.2",
  "numpy<2.0,>=1.26",
  "spacy==3.8.7",
  "scikit-learn>=1.5",
  "statsmodels>=0.14",
  "sentence-transformers==5.0.0",
  "transformers==4.54.0",
  "umap-learn==0.5.9.post2",
  "numba==0.61.2",
  "llvmlite==0.44.0",
  "plotly>=5.22",
  "tabulate>=0.9.0",
  "streamlit==1.49.1",
  "bertopic==0.17.4",
  "hdbscan==0.8.42",
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-cov>=5",
  "coverage[toml]>=7",
  "ruff>=0.5",
  "black>=24",
]

[project.urls]
Homepage = "https://github.com/shwnmnl/nlpsych"
Issues = "https://github.com/shwnmnl/nlpsych/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nlpsych*", "nlpsych_app*"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.package-data]
nlpsych_app = ["assets/*", ".streamlit/*"]

[project.scripts]
nlpsych-app = "nlpsych_app.launch:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
]

[tool.coverage.run]
branch = true
source = ["nlpsych", "nlpsych_app"]

[tool.coverage.report]
show_missing = true
skip_empty = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
